--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 *.iml
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/android/local.properties
+/android/.idea
+android/.idea/caches
+android/.idea/libraries
+android/.idea/modules.xml
+android/.idea/workspace.xml
+android/.idea/navEditor.xml
+android/.idea/assetWizardSettings.xml
 .DS_Store
-/build
-/captures
+android/build
+android/captures
 .externalNativeBuild
 .cxx
 local.properties
