--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material = { group = "androidx.compose.material", name = "material" }
 web3j-client = { group = "org.web3j", name = "core", version.ref = "web3j" }
 logging-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt" }
